--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node app.js"
+    "start": "nodemon app.js"
   },
   "author": "Giovanna / Douglas",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.19.2",
-    "mysql2": "^3.10.0",
+    "mysql2": "^3.10.1",
+    "nodemon": "^3.1.3",
     "sequelize": "^6.37.3"
   },
   "description": ""
